implement color tunnel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>fforw canvas-base, add scripts and edit title</title>
+<title>color tunnel</title>
 <style type="text/css">
 body
 {
@@ -19,6 +19,8 @@ body
 <script type="text/javascript" src="script/Class.js">
 </script>
 <script type="text/javascript" src="script/mainloop.js">
+</script>
+<script type="text/javascript" src="script/colortunnel.js">
 </script>
 
 </head>
