--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body
 </script>
 <script type="text/javascript" src="script/Class.js">
 </script>
-<script type="text/javascript" src="script/mainloop.js">
+<script type="text/javascript" src="script/requestAnimationFrame.js">
 </script>
 <script type="text/javascript" src="script/colortunnel.js">
 </script>
